# asteroids-jam

./: .gitignore  CMakeLists.txt  resources.txt
.github/workflows/: cmake-build-web.yml
src/: Asteroid.cpp  Asteroid.h  Collision.cpp  Collision.h  ColorBlender.h  Entities.hpp  EntityComponents.cpp  EntityComponents.h  Laser.cpp  Laser.h  Lerp.hpp  Munition.cpp  Munition.h  Player.cpp  Player.hpp  PlayerUI.cpp  PlayerUI.h  ResourceManager.cpp  ResourceManager.h  Timer.hpp  asteroids.cpp  enemy.cpp  enemy.h  globals.cpp  globals.h  gui_helper.cpp  gui_helper.h  helpers.h  minshell.html  ray_collision_2d.h  raylib_operators.h  screen_asteroids.cpp  screen_logo.cpp  screen_mainmenu.cpp  screen_options.cpp  screens.cpp  screens.h  shell.html
